--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.37",
     "@supabase/supabase-js": "^2.49.9",
+    "@tabler/icons-react": "^3.35.0",
     "add": "^2.0.6",
     "aos": "^2.3.4",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dialog": "^0.3.1",
     "firebase": "^11.0.1",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
     "headlessui": "^0.0.0",
     "lucide-react": "^0.454.0",
+    "motion": "^12.23.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.1",
@@ -42,7 +45,8 @@
     "spline": "^0.0.0",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.15.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
