Fix Vercel build with legacy-peer-deps

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "build": {
     "env": {},
-    "commands": {
-      "install": "npm install --legacy-peer-deps"
-    }
+    "installCommand": "npm install --legacy-peer-deps",
+    "buildCommand": "npm run build"
   }
 }
