--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
-  "build": {
-    "env": {},
-    "installCommand": "npm install --legacy-peer-deps",
-    "buildCommand": "npm run build",
-    "outputDirectory": "dist"
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "installCommand": "npm install --legacy-peer-deps",
+        "buildCommand": "npm run build",
+        "outputDirectory": "dist"
+      }
+    }
+  ]
 }
