Vercel deployment fix for React 18 and Vite

--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,11 @@
         "outputDirectory": "dist"
       }
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
