--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-  "version": 2,
+  "build": {
+    "env": {},
+    "installCommand": "npm install --legacy-peer-deps",
+    "buildCommand": "npm run build"
+  },
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
   ]
