--- a/package.json
+++ b/package.json
@@ -1,21 +1,58 @@
 {
-  "name": "portfolio",
-  "version": "1.0.0",
+  "name": "portfolio-v5",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "preinstall": "npm install --legacy-peer-deps",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@lottiefiles/dotlottie-react": "^0.17.1",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "@mui/styled-engine-sc": "^6.1.6",
+    "@react-spring/web": "^9.7.5",
+    "@splinetool/react-spline": "^4.0.0",
+    "@supabase/supabase-js": "^2.49.9",
+    "@tabler/icons-react": "^3.35.0",
+    "aos": "^2.3.4",
+    "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dialog": "^0.3.1",
+    "firebase": "^11.0.1",
+    "framer-motion": "^11.18.2",
+    "gsap": "^3.12.5",
+    "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-swipeable-views": "^0.14.1",
-    "react-swipeable-views-utils": "^0.14.1",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/material": "^5.14.0",
-    "vite": "^4.5.0"
+    "react-intersection-observer": "^9.13.1",
+    "react-router-dom": "^6.28.0",
+    "shadcn-ui": "^0.9.5",
+    "styled-components": "^6.1.13",
+    "sweetalert2": "^11.15.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "postcss": "^8.5.6",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.10"
   }
 }
