--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@mui/styled-engine-sc": "^6.1.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-spring/web": "^9.7.5",
     "@splinetool/react-spline": "^4.0.0",
     "@supabase/supabase-js": "^2.49.9",
